@@ -1,6 +1,11 @@
-    Changed cbook.reversed so it yields a tuple rather than a 
+    Added ax kwarg to pyplot.colorbar and Figure.colorbar so that
+    one can specify the axes object from which space for the colorbar
+    is to be taken, if one does not want to make the colorbar axes
+    manually.
+
+    Changed cbook.reversed so it yields a tuple rather than a
     (index, tuple). This agrees with the python reversed builtin,
-    and cbook only defines reversed if python doesnt provide the 
+    and cbook only defines reversed if python doesnt provide the
     builtin.
 
     Made skiprows=1 the default on csv2rec
